convert images to webp

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -385,7 +385,7 @@ a:hover {
     display: none;
   }
   main {
-    background-image: url("/public/storage/background-waves.svg");
+    background-image: url("/public/storage/background-waves.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
@@ -871,7 +871,7 @@ a:hover {
     display: none;
   }
   main {
-    background-image: url("/public/storage/background-waves.svg");
+    background-image: url("/public/storage/background-waves.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
