--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -184,7 +184,7 @@ a {
         }
     }
     main {
-        background-image: url("/public/storage/background-waves.svg");
+        background-image: url("/public/storage/background-waves.webp");
         background-size: cover;
         background-repeat: no-repeat;
         background-position-x: center;
@@ -764,7 +764,7 @@ a {
     }
 
     main {
-        background-image: url("/public/storage/background-waves.svg");
+        background-image: url("/public/storage/background-waves.webp");
         background-size: cover;
         background-repeat: no-repeat;
         background-position-x: center;
