--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -92,7 +92,7 @@ a {
                             padding: 0;
                             width: 100%;
                             height: 4px;
-                            background-color: $background-blue-neutral;
+                            background-color: $text-primary-color;
 
                             &:nth-child(even) {
                                 padding-left: 2px;
@@ -104,7 +104,7 @@ a {
                     .menu-text {
                         margin: 8px 0 0;
                         font-size: 14px;
-                        color: $background-blue-neutral;
+                        color: $text-primary-color;
                     }
                 }
 
